# exo-arm

./: .gitignore  README.md  run_parest.sh
model/: InertiaCalculations.m  ParametersScript.m  adc_measurements.py  adm_sim.m  angle_adc_measurements.py  angle_converter.m  arduino_feedback_lin.c  arm.mo  axoArm.mo  c_arduino.m  c_feedback_lin.m  controller_mex.cpp  controller_tester.m  dcMotor.mo  exo_dynamic_model.m  exo_main.m  exo_sim.m  exo_verification.m  f.m  f_matrix.m  feedback_lin_w_mex.m  g_matrix.m  hill_muscle_model.m  hill_sim.m  minv_matrix.m  muscle_len.py  n_plot.m  parest_forward.m  rot.m  sim_test.m  stepres.m  steps1.mat  steps2.mat  v_matrix.m
model/arduino_in_the_loop/: MatrixMath.cpp  MatrixMath.h  arduino_in_the_loop.ino
model/controllers/: admittance2.m  c_admittance.m  c_arduino.m  c_feedback_lin.m  c_mex.m  c_test.m  c_test.mat  controller_mex.cpp
model/ml_measure/: AxoArmUtils.cpp  AxoArmUtils.h  Matrix.cpp  Matrix.h  ml_measure.ino
model/oldOM/: axoArm3D.mo  axoArm_basedOnMatlab.mo  bldcMotor.mo  boxLink.mo  exoarm.mo  exportedVariables.csv  model.m  muscle.mo  simo.mos  test.fmu  test.mo  test1.mo
model/old_scripts/: forward_euler_test.m  ode_solver_mech_model.m
model/parest/: gb.m  gb_sim.m  makeOutput.m  (+4 more)
sensor/: data_logger.py
software/: muscle.py  requirements.txt
udoo-test/: CMakeLists.txt  README.md  main.c
udoo-test/FreeRTOSv9.0.0/FreeRTOS/Source/include/: FreeRTOSConfig.h  freeRTOSConfig.h
udoo-test/wowwow/: main.cpp  wowwow.ino
udoo-test/wowwow/libraries/FreeRTOSv9.0.0/FreeRTOS/Source/include/: portable.h
(+188 files in other folders)
